- Refactored the notification system preventing the N+1 problem   - Adding oAuth for google and GitHub authentication   - Adding Users Role toggle for admin dashboard   - enhancing the UI by adding a toast instead of default browser alert   - Optimizing Post Service / User Service and also Repositories using @EntityGraph to insure lazy loading   - Update story frontend   - Fixing missing or broken routes in [routerLinks]